--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,32 +7,54 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display: block;
+    text-align: center;
 }
+
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos {
+    visibility: hidden;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioTres {
+    margin-top: 100px;
+    margin-left: 200px;
+}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
-
+#ejercicioCuatro{
+    position: fixed;
+    top: 0;
+    left: 0;
+}
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
+#ejercicioCinco{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    margin-right:50px;
+}
 
 
+/* Ejercicio 7. */
 
-/* Ejercicio 6. */
+#ejercicioSiete {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+}
